[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/sidescroll_tileset/tileset_sidescroll-tileset.tres" type="TileSet" id=1]
[ext_resource path="res://common/UI/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://Screens/HBoxContainer/LevelEditorDemo/LevelEditorDemo.gd" type="Script" id=3]
[ext_resource path="res://common/Utility/GridDrawer.gd" type="Script" id=4]
[ext_resource path="res://Screens/HBoxContainer/LevelEditorDemo/buttongroup.tres" type="ButtonGroup" id=5]
[ext_resource path="res://common/VFX/LaserBeam2D/glowing_circle.png" type="Texture" id=6]

[node name="LevelEditorDemo" type="Node2D"]
script = ExtResource( 3 )

[node name="GridDrawer" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 131093, 0, 0, 131094, 0, 2, 196629, 0, 65536, 196630, 0, 131077, 196631, 0, 1, 196632, 0, 2, 262164, 0, 0, 262165, 0, 131078, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 131077, 262169, 0, 2, 327695, 0, 0, 327696, 0, 1, 327697, 0, 1, 327698, 0, 1, 327699, 0, 1, 327700, 0, 131078, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65538, 393231, 0, 65536, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65541, 393241, 0, 131074, 458764, 0, 0, 458765, 0, 1, 458766, 0, 1, 458767, 0, 131078, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65538, 524300, 0, 65536, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65541, 524305, 0, 131073, 524306, 0, 131073, 524307, 0, 131073, 524308, 0, 65542, 524309, 0, 65537, 524310, 0, 65541, 524311, 0, 131073, 524312, 0, 131074, 589836, 0, 131072, 589837, 0, 131073, 589838, 0, 131073, 589839, 0, 65542, 589840, 0, 65538, 589844, 0, 131072, 589845, 0, 131073, 589846, 0, 131074, 655375, 0, 131072, 655376, 0, 131074 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.82843
margin_right = 2.82837
mouse_filter = 2
theme = ExtResource( 2 )
custom_constants/margin_right = 50
custom_constants/margin_top = 150
custom_constants/margin_left = 50
custom_constants/margin_bottom = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbox" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 50.0
margin_top = 150.0
margin_right = 1870.0
margin_bottom = 255.0
mouse_filter = 2
size_flags_vertical = 0

[node name="Paint" type="Button" parent="CanvasLayer/MarginContainer/Toolbox"]
margin_left = 1554.0
margin_right = 1677.0
margin_bottom = 105.0
size_flags_horizontal = 10
size_flags_vertical = 0
toggle_mode = true
pressed = true
group = ExtResource( 5 )
text = "Paint"

[node name="Erase" type="Button" parent="CanvasLayer/MarginContainer/Toolbox"]
margin_left = 1693.0
margin_right = 1820.0
margin_bottom = 105.0
toggle_mode = true
group = ExtResource( 5 )
text = "Erase"

[node name="Toolbox2" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 529.0
margin_top = 835.0
margin_right = 1390.0
margin_bottom = 880.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Toolbox2"]
margin_right = 333.0
margin_bottom = 45.0
text = "Total Space Used:"

[node name="EditorCapacityBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/Toolbox2"]
margin_left = 349.0
margin_right = 861.0
margin_bottom = 45.0
rect_min_size = Vector2( 512, 0 )
max_value = 200.0
step = 1.0
value = 57.0
rounded = true

[node name="MouseCursor" type="Sprite" parent="."]
texture = ExtResource( 6 )
